--- a/.github/workflows/Windows CI.yml
+++ b/.github/workflows/Windows CI.yml
@@ -5,6 +5,7 @@ env:
   VCPKG_COMMIT_ID: "b2cb0da531c2f1f740045bfe7c4dac59f0b2b69c"
 
 on:
+  workflow_dispatch:  # 手动触发
   pull_request:
     paths-ignore:
       - "docs/**"
@@ -24,7 +25,7 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        target: [x86_64-pc-windows-msvc]  # 仅保留MSVC工具链
+        target: [x86_64-pc-windows-msvc]  # 仅MSVC工具链
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
