--- a/.github/workflows/Windows CI.yml
+++ b/.github/workflows/Windows CI.yml
@@ -1,11 +1,11 @@
-name: 1Windows Build
+name: Windows Build
 
 env:
   VCPKG_BINARY_SOURCES: "clear;x-gha,readwrite"
   VCPKG_COMMIT_ID: "b2cb0da531c2f1f740045bfe7c4dac59f0b2b69c"
 
 on:
-  workflow_dispatch:  # 手动触发
+  workflow_dispatch:
   pull_request:
     paths-ignore:
       - "docs/**"
@@ -25,31 +25,36 @@ jobs:
     runs-on: windows-2022
     strategy:
       matrix:
-        target: [x86_64-pc-windows-msvc]  # 仅MSVC工具链
+        target: [x86_64-pc-windows-msvc]
+
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          submodules: recursive
+    - name: Checkout code
+      uses: actions/checkout@v4
+      with:
+        submodules: recursive
 
-      - name: Setup vcpkg
-        uses: lukka/run-vcpkg@v11
-        with:
-          vcpkgDirectory: 'C:\vcpkg'
-          vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
+    - name: Setup vcpkg
+      uses: lukka/run-vcpkg@v11
+      with:
+        vcpkgDirectory: 'C:\vcpkg'
+        vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
 
-      - name: Install dependencies
-        run: |
-          .\vcpkg\vcpkg install --triplet x64-windows libvpx libyuv openssl
+    - name: Install dependencies
+      shell: pwsh
+      run: |
+        & "$env:VCPKG_ROOT\vcpkg" install --triplet x64-windows libvpx libyuv openssl
 
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@v1
-        with:
-          toolchain: stable
-          targets: ${{ matrix.target }}
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@v1
+      with:
+        toolchain: stable
+        targets: ${{ matrix.target }}
 
-      - name: Build (Release)
-        run: cargo build --release --target ${{ matrix.target }}
+    - name: Build (Release)
+      run: cargo build --release --target ${{ matrix.target }}
 
-      - name: Show output
-        run: dir target\${{ matrix.target }}\release\
+    - name: Show output
+      shell: pwsh
+      run: |
+        dir target\${{ matrix.target }}\release\
+        Write-Host "Build completed successfully"
