--- a/.github/workflows/Windows CI.yml
+++ b/.github/workflows/Windows CI.yml
@@ -5,16 +5,7 @@ env:
   VCPKG_COMMIT_ID: "b2cb0da531c2f1f740045bfe7c4dac59f0b2b69c"
 
 on:
-  workflow_dispatch:  # 手动触发配置
-    inputs:
-      build_type:
-        description: '选择构建类型'
-        required: true
-        default: 'release'
-        type: choice
-        options:
-          - 'debug'
-          - 'release'
+  workflow_dispatch:
   pull_request:
     paths-ignore:
       - "docs/**"
@@ -30,11 +21,8 @@ on:
 
 jobs:
   build-windows:
-    name: Build Windows (${{ matrix.target }})
+    name: Build Windows
     runs-on: windows-2022
-    strategy:
-      matrix:
-        target: [x86_64-pc-windows-msvc]
 
     steps:
     - name: Checkout code
@@ -44,7 +32,7 @@ jobs:
 
     - name: Setup vcpkg
       uses: lukka/run-vcpkg@v11
-      id: vcpkg
+      id: setup_vcpkg
       with:
         vcpkgDirectory: 'C:\vcpkg'
         vcpkgGitCommitId: ${{ env.VCPKG_COMMIT_ID }}
@@ -52,10 +40,20 @@ jobs:
     - name: Install dependencies
       shell: pwsh
       run: |
-        $vcpkgPath = "${{ steps.vcpkg.outputs.vcpkgRoot }}\vcpkg"
-        & "$vcpkgPath" install --triplet x64-windows libvpx libyuv openssl
+        # 确保使用绝对路径
+        $vcpkgRoot = "${{ steps.setup_vcpkg.outputs.vcpkgRoot }}"
+        if (-not (Test-Path "$vcpkgRoot\vcpkg.exe")) {
+            Write-Error "vcpkg.exe not found at $vcpkgRoot"
+            exit 1
+        }
+        
+        # 添加vcpkg到PATH
+        $env:PATH = "$vcpkgRoot;$env:PATH"
+        
+        # 安装依赖
+        vcpkg install --triplet x64-windows libvpx libyuv openssl
         if ($LASTEXITCODE -ne 0) {
-            Write-Error "vcpkg 安装失败"
+            Write-Error "vcpkg install failed"
             exit 1
         }
 
@@ -63,21 +61,15 @@ jobs:
       uses: dtolnay/rust-toolchain@v1
       with:
         toolchain: stable
-        targets: ${{ matrix.target }}
+        targets: x86_64-pc-windows-msvc
 
     - name: Build
       shell: pwsh
       run: |
-        $buildType = "${{ github.event.inputs.build_type || 'release' }}"
-        cargo build --$buildType --target ${{ matrix.target }}
-        if ($LASTEXITCODE -ne 0) {
-            Write-Error "构建失败"
-            exit 1
-        }
+        cargo build --release --target x86_64-pc-windows-msvc
 
     - name: Show output
       shell: pwsh
       run: |
-        $buildType = "${{ github.event.inputs.build_type || 'release' }}"
-        dir "target\${{ matrix.target }}\$buildType\"
-        Write-Host "✅ 构建成功！生成文件位于 target\${{ matrix.target }}\$buildType\"
+        dir target\x86_64-pc-windows-msvc\release\
+        Write-Host "✅ Build completed successfully"
